[gd_scene load_steps=3 format=3 uid="uid://dgqfy5u7j83ib"]

[ext_resource type="Script" path="res://mods/_base_game/scenes/ui/main_menu.gd" id="1_main_menu"]
[ext_resource type="Theme" uid="uid://cpdx7u62cktq6" path="res://assets/themes/ui_theme.tres" id="2_ui_theme"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ui_theme")
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="TitleContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/margin_top = 40

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "THE SPARKLING FARCE"
horizontal_alignment = 1

[node name="MenuContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NewGameButton" type="Button" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Load Game"

[node name="QuitButton" type="Button" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "v0.1.0"
horizontal_alignment = 2
